# fancontrol

./: .gitignore  README.md  install.sh  note.md  pyproject.toml  router-install.sh  test.sh
defaults/: example.py
fancontrol/: control.py  main.py
fancontrol/curve/: base.py  z_line.py
fancontrol/tools/: classes.py  constants.py  fan.py  fs.py  functions.py  hddtemp.py  hwmon.py  temp.py
scripts/: copy-config.sh  detect.sh  dump.sh  init.sh  lib.sh
scripts/init/: router.home.gongt.me.sh  server.sh
services/: fanspeed-fullspeed.service  fanspeed.service  hdd-init.service  hdd-temp.service  hdd-temp.timer
tests/: all.sh  auto.sh  fixed.sh  nosise.sh  test.sh  x.sh
