[tool.poetry]
name = "fancontrol"
version = "0.1.1"
description = ""
authors = ["GongT <admin@gongt.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
fanctl = 'fancontrol.main:cli'
fansd = 'fancontrol.main:_daemon'

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
